--- a/apic/environments/single-cluster/instances/management-portal-instance/instances/ibm-apic-portal-instance.yaml
+++ b/apic/environments/single-cluster/instances/management-portal-instance/instances/ibm-apic-portal-instance.yaml
@@ -26,7 +26,7 @@ spec:
           ibmapicptlinstance:
             name: portal
             spec:
-              version: 10.0.3.0-ifix1
+              version: 10.0.6.0-3968
               profile: n3xc4.m8
               portalAdminEndpoint:
                 annotations:
