--- a/apic/environments/single-cluster/instances/gateway-analytics-instance/instances/ibm-apic-analytics-instance.yaml
+++ b/apic/environments/single-cluster/instances/gateway-analytics-instance/instances/ibm-apic-analytics-instance.yaml
@@ -26,7 +26,7 @@ spec:
           ibmapica7sinstance:
             name: analytics
             spec:
-              version: 10.0.3.0-ifix1
+              version: 10.0.6.0-3968
               license:
                 accept: true
                 license: L-RJON-BZEP9N
