--- a/apic/environments/single-cluster/instances/gateway-analytics-instance/instances/ibm-apic-gateway-instance.yaml
+++ b/apic/environments/single-cluster/instances/gateway-analytics-instance/instances/ibm-apic-gateway-instance.yaml
@@ -26,7 +26,7 @@ spec:
           ibmapicgtwinstance:
             name: gateway
             spec:
-              version: 10.0.3.0-ifix1
+              version: 10.0.6.0-3968
               profile: n3xc4.m8
               apicGatewayServiceV5CompatibilityMode: false
               gatewayEndpoint:
