--- a/apic/templates/apic-multi-cluster/management-portal-instance/instances/ibm-apic-management-instance.yaml
+++ b/apic/templates/apic-multi-cluster/management-portal-instance/instances/ibm-apic-management-instance.yaml
@@ -26,7 +26,7 @@ spec:
           ibmapicmgmtinstance:
             name: management
             spec:
-              version: 10.0.3.0-ifix1
+              version: 10.0.6.0-3968
               profile: n3xc4.m16
               portal:
                 admin:
