--- a/apic/environments/single-cluster/instances/gateway-analytics-instance/instances/ibm-apic-gateway-instance.yaml
+++ b/apic/environments/single-cluster/instances/gateway-analytics-instance/instances/ibm-apic-gateway-instance.yaml
@@ -26,7 +26,7 @@ spec:
           ibmapicgtwinstance:
             name: gateway
             spec:
-              version: 10.0.6.0-3968
+              version: 10.0.7.0-5560
               profile: n3xc4.m8
               apicGatewayServiceV5CompatibilityMode: false
               gatewayEndpoint:
@@ -48,7 +48,7 @@ spec:
               datapowerLogLevel: 3
               license:
                 accept: true
-                license: L-RJON-BZEP9N
+                license: L-MMBZ-295QZQ
                 use: production
               tokenManagementService:
                 enabled: true
