Update to APIC 10.0.5.5-6227, update all Argo yamls to use api version v1beta1

--- a/apic/environments/single-cluster/instances/gateway-analytics-instance/instances/ibm-apic-analytics-instance.yaml
+++ b/apic/environments/single-cluster/instances/gateway-analytics-instance/instances/ibm-apic-analytics-instance.yaml
@@ -1,4 +1,4 @@
-apiVersion: argoproj.io/v1alpha1
+apiVersion: argoproj.io/v1beta1
 kind: Application
 metadata:
   name: ibm-apic-analytics-instance
@@ -26,7 +26,7 @@ spec:
           ibmapica7sinstance:
             name: analytics
             spec:
-              version: 10.0.7.0-5560
+              version: 10.0.5.5-6227
               license:
                 accept: true
                 license: L-MMBZ-295QZQ
