--- a/apic/environments/single-cluster/instances/management-portal-instance/instances/ibm-apic-portal-instance.yaml
+++ b/apic/environments/single-cluster/instances/management-portal-instance/instances/ibm-apic-portal-instance.yaml
@@ -1,4 +1,4 @@
-apiVersion: argoproj.io/v1alpha1
+apiVersion: argoproj.io/v1beta1
 kind: Application
 metadata:
   name: ibm-apic-portal-instance
@@ -26,7 +26,7 @@ spec:
           ibmapicptlinstance:
             name: portal
             spec:
-              version: 10.0.6.0-3968
+              version: 10.0.5.5-6227
               profile: n3xc4.m8
               portalAdminEndpoint:
                 annotations:
