--- a/apic/templates/apic-multi-cluster/gateway-analytics-instance/instances/ibm-apic-analytics-instance.yaml
+++ b/apic/templates/apic-multi-cluster/gateway-analytics-instance/instances/ibm-apic-analytics-instance.yaml
@@ -1,4 +1,4 @@
-apiVersion: argoproj.io/v1alpha1
+apiVersion: argoproj.io/v1beta1
 kind: Application
 metadata:
   name: ibm-apic-analytics-instance
@@ -26,7 +26,7 @@ spec:
           ibmapica7sinstance:
             name: analytics
             spec:
-              version: 10.0.6.0-3968
+              version: 10.0.5.5-6227
               license:
                 accept: true
                 license: L-RJON-BZEP9N
