deploy publish pipelines
Signed-off-by: SILA KISSUU <sila.kissuu@us.ibm.com>

--- a/apic/environments/single-cluster/pipelines/pipelines/apic-publish-pipeline.yaml
+++ b/apic/environments/single-cluster/pipelines/pipelines/apic-publish-pipeline.yaml
@@ -6,7 +6,7 @@ spec:
   params:
     - name: git-apic-pipeline-git-url
       type: string
-      default: 'https://github.com/<GIT_ORG>/apic-publish-pipeline.git'
+      default: 'https://github.com/sila-apic-gitops/apic-publish-pipeline.git'
       description: GitHub url where the pipeline scripts are stored. These are the python scripts the pipeline will execute
     - name: git-apic-pipeline-git-branch
       type: string
@@ -14,7 +14,7 @@ spec:
       description: Github branch for the pipeline scripts
     - name: git-apic-yaml-url
       type: string
-      default: 'https://github.com/<GIT_ORG>/apic-products-apis-yaml/'
+      default: 'https://github.com/sila-apic-gitops/apic-products-apis-yaml/'
       description: GitHub url where the products and APIs definitions are stored
     - name: git-apic-yaml-branch
       type: string
