update apiVersion to tekton/v1
Signed-off-by: SILA KISSUU <sila.kissuu@us.ibm.com>

--- a/mq/environments/ci/eventlisteners/mq-spring-app-stage-eventlistener.yaml
+++ b/mq/environments/ci/eventlisteners/mq-spring-app-stage-eventlistener.yaml
@@ -1,4 +1,4 @@
-apiVersion: triggers.tekton.dev/v1alpha1
+apiVersion: triggers.tekton.dev/v11
 kind: EventListener
 metadata:
   name: mq-spring-app-post-stage
