--- a/ace/environments/ci/triggertemplates/ace-integration-server.yaml
+++ b/ace/environments/ci/triggertemplates/ace-integration-server.yaml
@@ -1,4 +1,4 @@
-apiVersion: triggers.tekton.dev/v1alpha1
+apiVersion: triggers.tekton.dev/v11
 kind: TriggerTemplate
 metadata:
   name: ace-integration-server
@@ -9,7 +9,7 @@ spec:
     - name: git-org
       description: Login name of the origanisation
   resourcetemplates:
-    - apiVersion: tekton.dev/v1alpha1
+    - apiVersion: tekton.dev/v11
       kind: PipelineRun
       metadata:
         generateName: ace-integration-server-$(tt.params.source-repo)-
