--- a/apic/environments/single-cluster/pipelines/kustomization.yaml
+++ b/apic/environments/single-cluster/pipelines/kustomization.yaml
@@ -15,4 +15,4 @@ resources:
 # Secrets
 - secrets/apic-pipeline-git.yaml
 # - secrets/apic-config-email-server.yaml
-# - secrets/apic-pipeline-provider-org.yaml
+- secrets/apic-pipeline-provider-org.yaml
