add smtp config
Signed-off-by: SILA KISSUU <sila.kissuu@us.ibm.com>

--- a/apic/environments/single-cluster/pipelines/kustomization.yaml
+++ b/apic/environments/single-cluster/pipelines/kustomization.yaml
@@ -14,5 +14,5 @@ resources:
 
 # Secrets
 - secrets/apic-pipeline-git.yaml
-# - secrets/apic-config-email-server.yaml
+- secrets/apic-config-email-server.yaml
 - secrets/apic-pipeline-provider-org.yaml
